--- a/dapp/src/views/admin.pug
+++ b/dapp/src/views/admin.pug
@@ -2,7 +2,7 @@ html
    head
       link(href='https://fonts.googleapis.com/css?family=Poiret One' rel='stylesheet')
       link(href='https://fonts.googleapis.com/css?family=Outfit' rel='stylesheet')
-      title Specific Swap Admin
+      title NFT Swap Pool Admin
       link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous")
       link(rel="stylesheet" type="text/css" href="stylesheets/styles.css")
       script(type="module" src="javascripts/wallet-integration.js")
@@ -72,10 +72,27 @@ html
                a(class="page-link" href="#" id="policypagesetnext" onclick="stepPageSetNext('policy'); loadPolicyPageContent(getActivePage('policy'));")= '>>'
 
       div(class="d-flex flex-row justify-content-end padding")
-         button(class=`btn themed-color${themeclass}` type="button" id="generatePoolButton" onclick="const policyid = document.getElementById('policyidInput').value; if(policyid.length != 56) {alert('invalid policy id');return;} buildSpecificSwap(policyid).then(swapPoolInfo => { message = swapPoolInfo.message; const mBoxTitle = document.getElementById('messageBoxLabel'); if(message.indexOf('Redeemer') > -1 || message.indexOf('error') > -1) { mBoxTitle.innerText='Something went wrong'; } else { mBoxTitle.innerText=message; } document.getElementById('message-box-content').innerHTML=swapPoolInfo.message; document.getElementById('swap-pool-script').value = JSON.stringify(swapPoolInfo.swapPoolContractScript); document.getElementById('swap-pool-address').value = swapPoolInfo.swapPoolAddress; displayMBoxScriptFields(); const messageBox = new bootstrap.Modal('#messageBox', { keyboard: false }); messageBox.show();});") CREATE POOL
-         button(class=`btn themed-color${themeclass} disabled` type="button" id="generateFilteredPoolButton" onclick="const policyid = document.getElementById('policyidInput').value; if(policyid.length != 56) {alert('invalid policy id');return;} else if(numSelectedPoolNFTs < 1){alert('Please select some NFTs for the filter');return;} buildSpecificFilteredSwap(policyid).then(swapPoolInfo => { message = swapPoolInfo.message; const mBoxTitle = document.getElementById('messageBoxLabel'); if(message.indexOf('Redeemer') > -1 || message.indexOf('error') > -1) { mBoxTitle.innerText='Something went wrong'; } else { mBoxTitle.innerText=message; } document.getElementById('message-box-content').innerHTML=swapPoolInfo.message; document.getElementById('swap-pool-script').value = JSON.stringify(swapPoolInfo.swapPoolContractScript); document.getElementById('swap-pool-address').value = swapPoolInfo.swapPoolAddress; document.getElementById('filter-nft-hex').value = JSON.stringify(swapPoolInfo.nftsHex); displayMBoxFilteredScriptFields(); const messageBox = new bootstrap.Modal('#messageBox', { keyboard: false }); messageBox.show();});") CREATE FILTERED POOL
-         button(type="button" id="buildRulePoolButton" class=`btn themed-color${themeclass}` data-bs-toggle="modal" data-bs-target="#buildRuleContractDialog")= `CREATE RULE POOL`
-         
+
+         div(id="create_swap_pool_dropdown_menu" class="btn-group")
+               button(type="button" id="create_swap_pool_button" class=`btn select-contract${themeclass} d-flex dropdown-toggle text-wrap` data-bs-toggle="dropdown" aria-expanded="false") CREATE SWAP POOL
+               ul(class=`dropdown-menu ${themeclass}` id="create_swap_pool_dropdown")
+                  li
+                     h6(class="dropdown-header") SPECIFIC SWAP
+                  li
+                     div(class=`dropdown-item ${themeclass} d-flex`)
+                        a(class=`dropdown-item ${themeclass}` href="#" onclick="const policyid = document.getElementById('policyidInput').value; if(policyid.length != 56) {alert('Please provide valid policy id');return;} buildSpecificSwap(policyid).then(swapPoolInfo => { message = swapPoolInfo.message; const mBoxTitle = document.getElementById('messageBoxLabel'); if(message.indexOf('Redeemer') > -1 || message.indexOf('error') > -1) { mBoxTitle.innerText='Something went wrong'; } else { mBoxTitle.innerText=message; } document.getElementById('message-box-content').innerHTML=swapPoolInfo.message; document.getElementById('swap-pool-script').value = JSON.stringify(swapPoolInfo.swapPoolContractScript); document.getElementById('swap-pool-address').value = swapPoolInfo.swapPoolAddress; displayMBoxScriptFields(); const messageBox = new bootstrap.Modal('#messageBox', { keyboard: false }); messageBox.show();});") POLICY WIDE POOL
+                  li
+                     div(class=`dropdown-item ${themeclass} d-flex`)
+                        a(class=`dropdown-item ${themeclass}` href="#" onclick="const policyid = document.getElementById('policyidInput').value; if(policyid.length != 56) {alert('Please provide valid policy id');return;} else if(numSelectedPoolNFTs < 1){alert('Please select some NFTs for the filter');return;} buildSpecificFilteredSwap(policyid).then(swapPoolInfo => { message = swapPoolInfo.message; const mBoxTitle = document.getElementById('messageBoxLabel'); if(message.indexOf('Redeemer') > -1 || message.indexOf('error') > -1) { mBoxTitle.innerText='Something went wrong'; } else { mBoxTitle.innerText=message; } document.getElementById('message-box-content').innerHTML=swapPoolInfo.message; document.getElementById('swap-pool-script').value = JSON.stringify(swapPoolInfo.swapPoolContractScript); document.getElementById('swap-pool-address').value = swapPoolInfo.swapPoolAddress; document.getElementById('filter-nft-hex').value = JSON.stringify(swapPoolInfo.nftsHex); displayMBoxFilteredScriptFields(); const messageBox = new bootstrap.Modal('#messageBox', { keyboard: false }); messageBox.show();});") FILTERED POOL
+                  li
+                     div(class=`dropdown-item ${themeclass} d-flex` data-bs-toggle="modal" data-bs-target="#buildRuleContractDialog")
+                        a(class=`dropdown-item ${themeclass}` href="#" onclick="") RULE BASED POOL
+                  li
+                     h6(class="dropdown-header") RANDOM SWAP
+                  li
+                     div(class=`dropdown-item ${themeclass} d-flex`)
+                        a(class=`dropdown-item ${themeclass}` href="#" onclick="alert('The random swap pool is currently under development');") POLICY WIDE POOL
+
          div(id="add_nft_to_pool_dropdown_menu" class="btn-group")
                button(type="button" id="add_nft_to_pool_selection_button" class=`btn select-contract${themeclass} d-flex dropdown-toggle text-wrap` data-bs-toggle="dropdown" aria-expanded="false") ADD NFT(S) TO POOL
                   span(class="spinner-border" role="status" id="addNFTSpinner" style="display:none;") 
