Updated error msg image and added documentation

--- a/dapp/src/views/random.pug
+++ b/dapp/src/views/random.pug
@@ -41,7 +41,7 @@ html
                   button(type="button" class=`btn-close ${themeclass}` data-bs-dismiss="modal" aria-label="Close")
                div(class=`modal-body message-body ${themeclass}`)
                   div(class="container text-center")
-                     img(src=`https://image-optimizer.jpgstoreapis.com/QmZDxJV55YMszqUDjzhrZZqS9LaYXCSnGMtWeDNaB1LjHh` loading="lazy" height="200" ) 
+                     img(src=`images/message-box-error.webp` loading="lazy") 
                   div(class="container text-center padding")
                      img(src=`images/box-separator-line-${themeclass}.png` width="400") 
                   div(class="container text-center padding")
